--- a/build-config/conf/linux.x86_64.config
+++ b/build-config/conf/linux.x86_64.config
@@ -257,7 +257,7 @@ CONFIG_PARAVIRT_GUEST=y
 CONFIG_KVM_CLOCK=y
 CONFIG_KVM_GUEST=y
 CONFIG_PARAVIRT=y
-# CONFIG_PARAVIRT_SPINLOCKS is not set
+CONFIG_PARAVIRT_SPINLOCKS=y
 CONFIG_PARAVIRT_CLOCK=y
 # CONFIG_PARAVIRT_DEBUG is not set
 CONFIG_NO_BOOTMEM=y
@@ -987,7 +987,7 @@ CONFIG_NET_VENDOR_INTEL=y
 # CONFIG_E100 is not set
 CONFIG_E1000=y
 CONFIG_E1000E=y
-# CONFIG_IGB is not set
+CONFIG_IGB=y
 # CONFIG_IGBVF is not set
 # CONFIG_IXGB is not set
 # CONFIG_IXGBE is not set
@@ -1860,7 +1860,6 @@ CONFIG_X86_PLATFORM_DEVICES=y
 # CONFIG_INTEL_IPS is not set
 # CONFIG_IBM_RTL is not set
 # CONFIG_XO15_EBOOK is not set
-# CONFIG_DELL_S6000 is not set
 
 #
 # Hardware Spinlock drivers
