--- a/build-config/local.make.example
+++ b/build-config/local.make.example
@@ -18,7 +18,7 @@
 # DOWNLOADDIR = $(BUILDDIR)/download
 
 # Set the default version string
-# LSB_RELEASE_TAG = 2014.02
+# ONIE_RELEASE_TAG = 2014.02
 
 # Set the base URLs for the downloaded packages.  You could change
 # this to setup a local mirror.  The individual makefile fragments set
