Make serial port and console flag be able to customize
Accton AS5712_54X uses COM2 as serial port. And it needs to turn
on the flag of console to make syslinux boot menu be visible.

This patch provides additional variables to configure the settings.

Reference:
1. http://www.syslinux.org/wiki/index.php/SYSLINUX#CONSOLE_flag_val
2. http://www.syslinux.org/wiki/index.php/SYSLINUX#SERIAL_port_.5Bbaudrate_.5Bflowcontrol.5D.5D

--- a/build-config/recovery/grub-pxe.cfg
+++ b/build-config/recovery/grub-pxe.cfg
@@ -1,5 +1,5 @@
 
-serial --port=0x3f8 --speed=<CONSOLE_SPEED> --word=8 --parity=no --stop=1
+serial --port=<CONSOLE_PORT> --speed=<CONSOLE_SPEED> --word=8 --parity=no --stop=1
 terminal_input serial
 terminal_output serial
 set timeout=3
