trivial: export LSB_RELEASE_TAG Makefile variable
Export the LSB_RELEASE_TAG variable, making it available to various
sub-processes.

The one place this was showing up is in the version information from
the tool chain.  The toolchain config files have this definition:

  CT_TOOLCHAIN_PKGVERSION="ONIE-${LSB_RELEASE_TAG}"

Before this patch the reported version looked like:

build-04:~/onie/build-config$ ../build/x-tools/powerpc-softfloat/install/powerpc-onie-linux-uclibc/bin/powerpc-softfloat-gcc -v
[snip]
gcc version 4.7.3 (crosstool-NG 1.19.0 - ONIE-)

After the patch:

build-04:~/onie/build-config$ ../build/x-tools/powerpc-softfloat/install/powerpc-onie-linux-uclibc/bin/powerpc-softfloat-gcc -v
[snip]
gcc version 4.7.3 (crosstool-NG 1.19.0 - ONIE-master-201407100815)

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -228,6 +228,7 @@ endif
 DIRTY  = $(shell cd $(MACHINEDIR) && git status | \
 		egrep -q '(Your branch is ahead|modified:|Untracked files:)' && echo -dirty)
 LSB_RELEASE_TAG := $(ONIE_RELEASE_TAG)$(VENDOR_VERSION)$(DIRTY)
+export LSB_RELEASE_TAG
 
 #-------------------------------------------------------------------------------
 #
