Adding CT_NG_COMPONENTS prefetching, using sha1 checksums
crosstool-ng config files are generated by:
./ct-ng menuconfig
at:
<BUILDDIR>/crosstool-ng/crosstool-ng-1.19.0

gpg keys are verified using keys.gnupg.net keyserver

CT_NG_COMPONENTS are cached at:
https://dev.cumulusnetworks.com/~curt/mirror/onie/crosstool-NG/

Downloaded files checksums (non sha1) verification origin:
strace-4.6.tar.xz
  http://sourceforge.net/projects/strace/files/strace/4.6/strace-4.6.tar.xz.asc
ppl: Parma Polyhedra Library (Release 0.11.2)
  ftp://ftp.cs.unipr.it/pub/ppl/releases/0.11.2/ppl-0.11.2.tar.lzma.sign
upstream/mpfr-2.4.2.tar.bz2.sha1
  https://ftp.gnu.org/gnu/mpfr/mpfr-2.4.2.tar.bz2.sig
upstream/mpc-1.0.1.tar.gz.sha1
  https://ftp.gnu.org/gnu/mpc/mpc-1.0.1.tar.gz.sig
upstream/make-3.81.tar.bz2.sha1
  https://ftp.gnu.org/gnu/make/make-3.81.tar.bz2.sig
upstream/m4-1.4.13.tar.xz.sha1
  https://ftp.gnu.org/gnu/m4/m4-1.4.13.tar.xz.sig
upstream/ltrace_0.5.3.orig.tar.gz.sha1
  http://ftp.de.debian.org/debian/pool/main/l/ltrace/ltrace_0.5.3-2.1.dsc
upstream/libtool-2.2.6b.tar.lzma.sha1
  https://ftp.gnu.org/gnu/libtool/libtool-2.2.6b.tar.lzma.sig
upstream/libelf-0.8.13.tar.gz.sha1
  http://www.mr511.de/software/  has no md5sums.
  Md5sum verified with:
    http://lists.freebsd.org/pipermail/freebsd-ports-bugs/2009-November/176537.html
    https://dev.openwrt.org/browser/packages/libs/libelf/Makefile?rev=20985
  We are downloading from:
    http://dev.cumulusnetworks.com/~curt/mirror/onie/crosstool-NG/libelf/libelf-0.8.13.tar.gz
  http://packages.ubuntu.com/trusty/libelfg0 has a different checksum
upstream/gmp-4.3.2.tar.bz2.sha1
  https://ftp.gnu.org/gnu/gmp/gmp-4.3.2.tar.bz2.sig
upstream/gdb-7.4.1.tar.bz2.sha1
  https://ftp.gnu.org/gnu/gdb/gdb-7.4.1.tar.bz2.sig
upstream/gcc-4.7.3.tar.bz2.sha1
  https://ftp.gnu.org/gnu/gcc/gcc-4.7.3/gcc-4.7.3.tar.bz2.sig
upstream/duma_2_5_15.tar.gz.sha1
  http://sourceforge.net/projects/duma/files/duma/2.5.15/
  sha1: f1f90620c5eff4e76316594fa3e7e5a6833

--- a/build-config/conf/crosstool.powerpc-softfloat.config
+++ b/build-config/conf/crosstool.powerpc-softfloat.config
@@ -1,11 +1,9 @@
 #
 # Automatically generated make config: don't edit
 # crosstool-NG 1.19.0 Configuration
-# Fri May  2 13:31:32 2014
+# Thu Jul 17 07:30:40 2014
 #
 CT_CONFIGURE_has_xz=y
-CT_CONFIGURE_has_cvs=y
-CT_CONFIGURE_has_svn=y
 CT_MODULES=y
 
 #
@@ -23,7 +21,8 @@ CT_EXPERIMENTAL=y
 #
 # Paths
 #
-CT_LOCAL_TARBALLS_DIR=""
+CT_LOCAL_TARBALLS_DIR="${DOWNLOADDIR}"
+# CT_SAVE_TARBALLS is not set
 CT_CUSTOM_LOCATION_ROOT_DIR=""
 CT_WORK_DIR="${CT_TOP_DIR}/build"
 CT_PREFIX_DIR="${XTOOLS_INSTALL_DIR}/${CT_TARGET}"
@@ -36,13 +35,7 @@ CT_STRIP_ALL_TOOLCHAIN_EXECUTABLES=y
 #
 # Downloading
 #
-# CT_FORBID_DOWNLOAD is not set
-# CT_FORCE_DOWNLOAD is not set
-CT_CONNECT_TIMEOUT=10
-# CT_ONLY_DOWNLOAD is not set
-CT_USE_MIRROR=y
-# CT_FORCE_MIRROR is not set
-CT_MIRROR_BASE_URL="${CROSSTOOL_ONIE_MIRROR}"
+CT_FORBID_DOWNLOAD=y
 
 #
 # Extracting
