--- a/build-config/conf/crosstool/uClibc-0.9.32.1/crosstool.x86_64.config
+++ b/build-config/conf/crosstool/uClibc-0.9.32.1/crosstool.x86_64.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # crosstool-NG 1.19.0 Configuration
-# Thu Jul 17 07:30:40 2014
+# Thu Jul 17 13:58:12 2014
 #
 CT_CONFIGURE_has_xz=y
 CT_MODULES=y
@@ -86,22 +86,19 @@ CT_LOG_FILE_COMPRESS=y
 #
 # Target options
 #
-CT_ARCH="powerpc"
+CT_ARCH="x86"
 CT_ARCH_SUPPORTS_32=y
 CT_ARCH_SUPPORTS_64=y
-CT_ARCH_SUPPORTS_WITH_ABI=y
+CT_ARCH_SUPPORTS_WITH_ARCH=y
 CT_ARCH_SUPPORTS_WITH_CPU=y
 CT_ARCH_SUPPORTS_WITH_TUNE=y
-CT_ARCH_SUPPORTS_WITH_FLOAT=y
 CT_ARCH_DEFAULT_32=y
-CT_ARCH_ABI=""
+CT_ARCH_ARCH=""
 CT_ARCH_CPU=""
 CT_ARCH_TUNE=""
-CT_ARCH_32=y
-# CT_ARCH_64 is not set
-CT_ARCH_BITNESS=32
-# CT_ARCH_FLOAT_HW is not set
-CT_ARCH_FLOAT_SW=y
+# CT_ARCH_32 is not set
+CT_ARCH_64=y
+CT_ARCH_BITNESS=64
 CT_TARGET_CFLAGS=""
 CT_TARGET_LDFLAGS=""
 # CT_ARCH_alpha is not set
@@ -111,11 +108,11 @@ CT_TARGET_LDFLAGS=""
 # CT_ARCH_m68k is not set
 # CT_ARCH_microblaze is not set
 # CT_ARCH_mips is not set
-CT_ARCH_powerpc=y
+# CT_ARCH_powerpc is not set
 # CT_ARCH_s390 is not set
 # CT_ARCH_sh is not set
 # CT_ARCH_sparc is not set
-# CT_ARCH_x86 is not set
+CT_ARCH_x86=y
 CT_ARCH_alpha_AVAILABLE=y
 CT_ARCH_arm_AVAILABLE=y
 CT_ARCH_avr32_AVAILABLE=y
@@ -139,14 +136,7 @@ CT_ARCH_USE_MMU=y
 #
 # Target optimisations
 #
-CT_ARCH_FLOAT="soft"
-
-#
-# powerpc other options
-#
-CT_ARCH_powerpc_ABI=""
-CT_ARCH_powerpc_ABI_DEFAULT=y
-# CT_ARCH_powerpc_ABI_SPE is not set
+CT_ARCH_FLOAT=""
 
 #
 # Toolchain options
@@ -169,7 +159,7 @@ CT_TOOLCHAIN_BUGURL=""
 #
 CT_TARGET_VENDOR="onie"
 CT_TARGET_ALIAS_SED_EXPR=""
-CT_TARGET_ALIAS="powerpc-softfloat"
+CT_TARGET_ALIAS="x86_64"
 
 #
 # Toolchain type
@@ -200,6 +190,7 @@ CT_KERNEL="linux"
 CT_KERNEL_VERSION="custom"
 # CT_KERNEL_bare_metal is not set
 CT_KERNEL_linux=y
+# CT_KERNEL_windows is not set
 CT_KERNEL_bare_metal_AVAILABLE=y
 CT_KERNEL_linux_AVAILABLE=y
 # CT_KERNEL_V_3_10 is not set
@@ -265,9 +256,13 @@ CT_BINUTILS_2_19_or_later=y
 CT_BINUTILS_2_18_or_later=y
 CT_BINUTILS_HAS_HASH_STYLE=y
 CT_BINUTILS_HAS_GOLD=y
+CT_BINUTILS_GOLD_SUPPORTS_ARCH=y
 CT_BINUTILS_HAS_PLUGINS=y
 CT_BINUTILS_HAS_PKGVERSION_BUGURL=y
 CT_BINUTILS_LINKER_LD=y
+# CT_BINUTILS_LINKER_GOLD is not set
+# CT_BINUTILS_LINKER_LD_GOLD is not set
+# CT_BINUTILS_LINKER_GOLD_LD is not set
 CT_BINUTILS_LINKERS_LIST="ld"
 CT_BINUTILS_LINKER_DEFAULT="bfd"
 # CT_BINUTILS_PLUGINS is not set
@@ -395,7 +390,7 @@ CT_CC_GCC_LNK_HASH_STYLE=""
 # C-library
 #
 CT_LIBC="uClibc"
-CT_LIBC_VERSION="custom"
+CT_LIBC_VERSION="0.9.32.1"
 # CT_LIBC_eglibc is not set
 # CT_LIBC_glibc is not set
 CT_LIBC_uClibc=y
@@ -408,15 +403,15 @@ CT_LIBC_uClibc_AVAILABLE=y
 # CT_LIBC_UCLIBC_V_0_9_33_2 is not set
 # CT_LIBC_UCLIBC_V_0_9_33_1 is not set
 # CT_LIBC_UCLIBC_V_0_9_33 is not set
-# CT_LIBC_UCLIBC_V_0_9_32_1 is not set
+CT_LIBC_UCLIBC_V_0_9_32_1=y
 # CT_LIBC_UCLIBC_V_0_9_32 is not set
 # CT_LIBC_UCLIBC_V_0_9_31 is not set
 # CT_LIBC_UCLIBC_V_0_9_30_3 is not set
 # CT_LIBC_UCLIBC_V_0_9_30_2 is not set
 # CT_LIBC_UCLIBC_V_0_9_30_1 is not set
 # CT_LIBC_UCLIBC_V_0_9_30 is not set
-CT_LIBC_UCLIBC_CUSTOM=y
-CT_LIBC_UCLIBC_CUSTOM_LOCATION="${DOWNLOADDIR}/${UCLIBC_TARBALL}"
+# CT_LIBC_UCLIBC_CUSTOM is not set
+CT_LIBC_UCLIBC_0_9_32_or_later=y
 CT_LIBC_UCLIBC_0_9_30_or_later=y
 CT_LIBC_UCLIBC_PARALLEL=y
 CT_LIBC_UCLIBC_VERBOSITY_0=y
