Remove platform powerpc-as6700-32x-r0b

--- a/components/powerpc/linux/kernel-e500mc/Makefile.comp
+++ b/components/powerpc/linux/kernel-e500mc/Makefile.comp
@@ -57,7 +57,7 @@ $(COMPDIR)/linux-e500mc-headers: $(COMPDIR)/linux-e500mc-headers/.done
 
 
 # These are the dtb files built for this kernel configuration:
-DTS_LIST := powerpc-as6700-32x-r0 powerpc-as5710-54x-r0a powerpc-as6700-32x-r0b powerpc-as5710-54x-r0b
+DTS_LIST := powerpc-as6700-32x-r0 powerpc-as5710-54x-r0a powerpc-as5710-54x-r0b
 DTB_LIST := $(foreach dts,$(DTS_LIST),$(COMPDIR)/linux-e500mc-dtbs/$(dts).dtb)
 
 $(COMPDIR)/linux-e500mc-dtbs/%.dtb: $(ONL_SUBMODULE_LINUX_3_8_13)/arch/powerpc/boot/dts/%.dts kernel-e500mc | $(shell mkdir -p $(COMPDIR)/linux-e500mc-dtbs)
