Make MTD utilities be an optional tool in ONIE
MTD utilities are included by default. To disable the utilities,
just insert the line 'MTDUTILS_ENABLE = no' in machine.conf

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -277,7 +277,9 @@ include make/busybox.make
 include make/zlib.make
 include make/lzo.make
 include make/e2fsprogs.make
-include make/mtdutils.make
+ifeq ($(MTDUTILS_ENABLE),yes)
+  include make/mtdutils.make
+endif
 include make/dropbear.make
 ifeq ($(GPT_ENABLE),yes)
   include make/popt.make
