Improve (clean up, fix) serial console parameters on x86 systems.
There are two main changes:

1. Previously, to specify a serial console parameter (port,
baud rate, etc.), the machine-specific configuration has to
provide both CONSOLE_* make variables for syslinux for
the recovery images, and GRUB_* shell/environ variables for grub.
And the latter in two places, for ONIE and the demo OS.
To consolidate everything, the grub parameters are now
constructed from the CONSOLE_* variables.  So they are all
defined in one place and only once (in machine.make).

2. In syslinux.cfg, specify the serial console's IO port address
instead of the unit number, since the unit number doesn't seem
to always work.

Some stylistic points:

1. Curt and I prefer CONSOLE_DEV over CONSOLE_UNIT, so that's
what it's called now.

2. I could have gotten rid of most if not all of the GRUB_* variables
and instead had the build process massage the destination files
directly (e.g., just put the baud rate directly into
installer/x86_64/grub.d/50_onie_grub).  I decided against it
becasue GRUB_SERIAL_COMMAND and the like are kind of a grub
tradition, and they give us some extra flexibility that
we may need later.

3. I chose to pass CONSOLE_* explicitly to scripts invoked by make,
instead of sticking them in the environment from the start, exporting
them where they are defined in build-config/arch/x86_64.make.
To me, this is better, though more cluttered, because it gives
a future reader of the build system (pity the poor soul) a better
chance of figuring out where these values come from.

--- a/build-config/recovery/grub-pxe.cfg
+++ b/build-config/recovery/grub-pxe.cfg
@@ -10,7 +10,7 @@ function onie_entry_end {
   echo "Build Date: $onie_build_date"
 }
 
-ONIE_CMDLINE_LINUX="quiet console=tty0 console=ttyS<CONSOLE_UNIT>,<CONSOLE_SPEED>n8 boot_env=recovery"
+ONIE_CMDLINE_LINUX="quiet console=tty0 console=ttyS<CONSOLE_DEV>,<CONSOLE_SPEED>n8 boot_env=recovery"
 
 menuentry "ONIE: Rescue" --class gnu-linux --class onie {
   echo    "ONIE: Rescue Mode ..."
