Fixed KVM build issue
$ONL/builds/swi/i386/kvm created onl-$version-i386.swi but
$ONL/builds/kvm/i386/onl referenced onl-i386.swi

changed to both  onl-$version-i386.swi

--- a/builds/kvm/i386/onl/Makefile.comp
+++ b/builds/kvm/i386/onl/Makefile.comp
@@ -34,7 +34,7 @@ endif
 # Pull loader from the repo
 loader-i386.iso := $(shell $(ONL_PKG_INSTALL) loader-i386:i386 --find-file loader-i386.iso)
 
-SWI := $(ONL)/builds/swi/i386/kvm/onl-i386-kvm.swi
+SWI := $(ONL)/builds/swi/i386/kvm/onl-$(ONL_RELEASE_VERSION)-i386-kvm.swi
 
 # Rebuild i386.swi
 $(SWI):
