Added onlp-quanta submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "submodules/bigcode"]
 	path = submodules/bigcode
 	url = git://github.com/floodlight/bigcode
+[submodule "submodules/onlp-quanta"]
+	path = submodules/onlp-quanta
+	url = git://github.com/opennetworklinux/ONLP-quanta
