--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "submodules/bigcode"]
 	path = submodules/bigcode
 	url = git://github.com/floodlight/bigcode
+[submodule "submodules/onlp-accton"]
+	path = submodules/onlp-accton
+	url = git@github.com:opennetworklinux/onlp-accton
