busybox udhcpc: Make hostname sanitization be optional
The hostname leading with digit passed by DHCP opt 66 is invalid
because it is constrained by RFC-1035.

As mentioned in networking/udhcp/Config.src:
    udhcpc will check some options (such as option 12 -
    hostname) and if they don't look like valid hostnames
    (for example, if they start with dash or contain spaces),
    they will be replaced with string "bad" when exporting
    to the environment.

The invalid hostname will be replaced with string "bad".  It causes
ONIE use the "bad" hostname to fetch installer.  This patch will
disable the check and pass TFTP server name to ONIE without any
alteration.

Ref:
http://git.busybox.net/busybox/commit/?id=85090c162b322a4ffe53d251e59bbfc212a829ee

Signed-off-by: david_yang <david_yang@accton.com>

--- a/build-config/conf/busybox.config
+++ b/build-config/conf/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.20.0
-# Wed Sep 17 14:19:34 2014
+# Wed Oct  8 11:20:45 2014
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -862,6 +862,7 @@ CONFIG_UDHCPC6=y
 CONFIG_DHCPD_LEASES_FILE=""
 CONFIG_UDHCPC=y
 CONFIG_FEATURE_UDHCPC_ARPING=y
+# CONFIG_FEATURE_UDHCPC_SANITIZEOPT is not set
 # CONFIG_FEATURE_UDHCP_PORT is not set
 CONFIG_UDHCP_DEBUG=9
 CONFIG_FEATURE_UDHCP_RFC3397=y
