package mirror: use http://mirror.opencompute.org/onie
Fixes #9

This patch changes the default package mirror to
http://mirror.opencompute.org/onie.

Testing Done:

From a clean build tree (the build directory was completely empty)
built the kvm_x86_64 machine and fsl_p2020rdbpca (PowerPC) machines.

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -261,7 +261,7 @@ endif
 #
 
 # Default mirror for packages needed by ONIE
-ONIE_MIRROR	?= http://dev.cumulusnetworks.com/~curt/mirror/onie
+ONIE_MIRROR	?= http://mirror.opencompute.org/onie
 
 include make/crosstool-ng.make
 include make/kernel-download.make
