--- a/machine/accton/accton_as4600_54t/kernel/config
+++ b/machine/accton/accton_as4600_54t/kernel/config
@@ -1,3 +1,14 @@
 CONFIG_AS4600_54T=y
 CONFIG_RTC_DRV_DS1672=y
 CONFIG_SENSORS_ADT7475=y
+
+CONFIG_MODULES=y
+CONFIG_MODULE_FORCE_LOAD=y
+CONFIG_MODULE_UNLOAD=y
+CONFIG_MODULE_FORCE_UNLOAD=y
+# CONFIG_KPROBES is not set
+# CONFIG_MODVERSIONS is not set
+# CONFIG_MODULE_SRCVERSION_ALL is not set
+# CONFIG_MTD_TESTS is not set
+# CONFIG_I2C_STUB is not set
+# CONFIG_CRYPTO_TEST is not set
