Alpha release of Open Route Cache (ORC)
Small utility that syncs state from software Linux Kernel tables
to hardware accelerated tables.  Currently only supports Unicast IPv4.

Depends on binary only packages:
  orc-brcm-6.3.3-release : statically linked to Silicon SDK
  libbroadcom-kernel-$KERNEL : kernel specific loadable modules

Which are available pre-compiled from the newly created ONL repository:
    deb [arch=powerpc] http://apt.opennetlinux.org/debian unstable main

--- a/components/powerpc/orc/deb/debuild/debian/control
+++ b/components/powerpc/orc/deb/debuild/debian/control
@@ -7,6 +7,6 @@ Standards-Version: 3.8.4
 
 Package: orc
 Architecture: powerpc
-Depends: 
+Depends: orc-brcm-6.3.3-release
 Description: Open Route Cache
  Open Route Cache caches Linux routing information into network hardware.
