Fixed up build system so that closed source repos are happy
* Everyone can build open source repos
* All closed source is in seperate git submodules
* The package management script, $ONL/tools/onlpkg.py, only lists
    closed source packages if the $ONL_CLOSED_SOURCE is set.
* I _think_ the closed source repos shouldb't bother anyone without
    that var set

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,12 +19,19 @@
 [submodule "submodules/bigcode"]
 	path = submodules/bigcode
 	url = git://github.com/floodlight/bigcode
-[submodule "submodules/onlp-accton"]
-	path = submodules/onlp-accton
-	url = git@github.com:opennetworklinux/onlp-accton
 [submodule "submodules/onlp-quanta"]
 	path = submodules/onlp-quanta
 	url = git://github.com/opennetworklinux/ONLP-quanta
+# These are actually closed source repos and can only
+# be checked out by maintainers.  The automatic
+# submodule checkout part of the build system should
+# prevent people from accidentally checking these out
+#
+# TODO: sync with these companies and verify we can open
+# source them!
 [submodule "submodules/onlp-dni"]
 	path = submodules/onlp-dni
 	url = git@github.com:opennetworklinux/onlp-dni
+[submodule "submodules/onlp-accton"]
+	path = submodules/onlp-accton
+	url = git@github.com:opennetworklinux/onlp-accton
