Updated ONLP and ONLP-quanta to HEAD
* Updated ONLP package versions
* Added ONLP to onlp-powerpc-quanta-lb9-r0/Makefile depends

--- a/components/powerpc/onlp/onlp-powerpc-quanta-lb9-r0/Makefile
+++ b/components/powerpc/onlp/onlp-powerpc-quanta-lb9-r0/Makefile
@@ -2,6 +2,6 @@ ifndef ONL
 $(error $$ONL is undefined.)
 endif
 
-ONL_REQUIRED_SUBMODULES := infra bigcode onlp-quanta
+ONL_REQUIRED_SUBMODULES := infra bigcode onlp-quanta onlp
 
 include $(ONL)/make/component.mk
