Add support for upstream syslinux
To insulate ONIE build from syslinux version changes in different Linux
distro's, we're pulling in a specific `syslinux` version from upstream.

The version selected is the latest from the 4.x series which is what
ONIE has been using till now. The exact version is - `4.07`.

The upstream package already comes bundled with pre-built binaries which
we are using directly (hence no syslinux source build needed).

The `debian-prepare-build-host` target has the `syslinux-common` package
removed as it's no longer needed.

Signed-off-by: Curt Brune <curt@cumulusnetworks.com>

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -275,6 +275,9 @@ include make/kernel-download.make
 include make/uclibc-download.make
 include make/xtools.make
 include make/sysroot.make
+ifeq ($(SYSLINUX_ENABLE),yes)
+include make/syslinux.make
+endif
 include make/kernel.make
 ifeq ($(UBOOT_ENABLE),yes)
   include make/u-boot.make
@@ -371,7 +374,7 @@ machine-prefix:
 # Install required build packages for a x86_64 debian based build host
 DEBIAN_BUILD_HOST_PACKAGES	= build-essential stgit u-boot-tools python-sphinx rst2pdf \
 				  gperf device-tree-compiler python-all-dev genisoimage \
-				  syslinux-common autoconf automake bison flex texinfo libtool \
+				  autoconf automake bison flex texinfo libtool \
 				  realpath gawk libncurses5 libncurses5-dev bc
 
 PHONY += debian-prepare-build-host
