Add support for configrable syslinux menu default
The default syslinux menu entry can be selected by specifying a
parameter in machine.make of a platform - SYSLINUX_DEFAULT_MODE.

This parameter is documented in machine/kvm_x86_64/machine.make.

--- a/build-config/recovery/syslinux.cfg
+++ b/build-config/recovery/syslinux.cfg
@@ -13,13 +13,13 @@ totaltimeout 9000
 
 console <CONSOLE_FLAG>
 
-default menu.c32
+ui menu.c32
+default <SYSLINUX_DEFAULT_MODE>
 
 menu title ONIE Installer
 
 label rescue
   menu label ONIE: Rescue
-  menu default
   kernel vmlinuz
   append initrd=initrd.xz console=tty0 console=ttyS<CONSOLE_DEV>,<CONSOLE_SPEED>n8 boot_env=recovery boot_reason=rescue
 
