Revising non-removable disk detection over Mellanox x86 systems
Former design:
Look for the block device that has a very
specific, bus centric path in the system.

Updated design:
1. Get all mountable partitions / drives from /proc/partitions
2. Look for the block device in: /sys/bus /sys/class /sys/block
   Ref: https://www.kernel.org/doc/Documentation/sysfs-rules.txt
3. Only disks have ${device}/removable
4. only non-removable disks have ${device}/removable = 0
5. There should be only 1 non-removable disk

Alternative designs not used:
1. ONIE:/ # parted -l | grep -v "^Disk Flags:" | grep "^Disk" | cut -d" "
-f 2 | se d -e"s/:$//g"
2. ONIE:/ # fdisk -l | grep "^Disk" | cut -d" " -f 2 |  sed -e"s/:$//g"
3. ONIE:/ # blkid

/proc/partitions is chosen according to ONIE documentation:
https://opencomputeproject.github.io/onie/docs/design-spec/discovery.html

Update error flow report

Former design:
echo all the warning lines

Updated design:
source /lib/onie/functions
log_warning_msg detailed report
echo 1 line error report

Tests:
ONIE:/ # install_url file:///demo-installer-x86_64-mlnx_x86-r5.0.bin
Review /boot/onie-support.tar.bz2 onie-support/log/onie.log file
ONIE:/ # update_url file:///onie-updater-x86_64-mlnx_x86-r5.0
Inject error to update flow by adding:
mlnx_non_removable_mountables_disks_count=5
  ERROR: Invalid ONIE install device: more than 1 available device: sda
  ONIE:/ # tail -n 40 /var/log/onie.log
  Dec 22 20:49:44 <hostname> local0.warn onie-warn: Warning:
  x86_64-mlnx_x86-r5.0: Unable to find internal ONIE install device
  Dec 22 20:49:44 <hostname> local0.warn onie-warn: Warning: found
  more than 1 non-removable block device - aborting
  Dec 22 20:49:44 <hostname> local0.warn onie-warn: Warning:
  non-removable block devices list: sda
  Dec 22 20:49:44 <hostname> local0.info os-install: WARNING: Unable
  to find ONIE install block device.
mlnx_non_removable_mountables_disks_count=0
  ERROR: Invalid ONIE install device: no device found
  ONIE:/ # 

--- a/machine/mellanox/mlnx_x86/installer.conf
+++ b/machine/mellanox/mlnx_x86/installer.conf
@@ -1,6 +1,8 @@
 # Mellanox SX1400 Series
 # CPU Module: Intel Core i7-3612QE
 
+. /lib/onie/functions
+
 description="Mellanox x86 system"
 
 # Default ONIE block device
@@ -17,24 +19,50 @@ install_device_platform()
     # maybe with a USB drive connected the internal disk now shows as
     # /dev/sdb.
     #
-    # The approach here is to look for the block device that has a
-    # very specific, bus centric path in the system.  The internal
-    # CFast device can only show up with this address.
+    # The approach here is:
+    # 1. Get all mountable partitions / drives from /proc/partitions
+    # 2. Look for the block device in: /sys/bus /sys/class /sys/block
+    #    Ref: https://www.kernel.org/doc/Documentation/sysfs-rules.txt
+    # 3. Only disks have ${device}/removable
+    # 4. only non-removable disks have ${device}/removable = 0
+    # 5. There should be only 1 non-removable disk
 
-    # Find the internal CFast device -- this path is specific to this platform
-    mlnx_x86_disk="/sys/devices/pci0000:00/0000:00:1f.2/ata1/host0/target0:0:0/0:0:0:0"
-    for d in /sys/block/* ; do
-        if [ -e "$d/device" ] ; then
-            path="$(realpath $d/device)"
-            if [ "$path" = "$mlnx_x86_disk" ] ; then
-                device="/dev/$(basename $d)"
-                echo $device
-                return 0
+    mlnx_non_removable_mountables_disks=""
+    mlnx_non_removable_mountables_disks_count=0
+    mlnx_mountables_partitions=$(cat /proc/partitions | grep -v "^major" | awk '{{print $4}}')
+    for mlnx_block_device_name in ${mlnx_mountables_partitions}
+    do
+        mlnx_block_device_link=$(find /sys/bus /sys/class /sys/block/ -name ${mlnx_block_device_name})
+        for mlnx_first_block_device_link in ${mlnx_block_device_link}
+        do
+            if [ -e ${mlnx_first_block_device_link}/removable ] ; then
+                if [ "0" = $(cat ${mlnx_first_block_device_link}/removable) ] ; then
+                    let mlnx_non_removable_mountables_disks_count=${mlnx_non_removable_mountables_disks_count}+1
+                    if [ "1" == "${mlnx_non_removable_mountables_disks_count}" ] ; then
+                        mlnx_non_removable_mountables_disks="${mlnx_block_device_name}"
+                    else
+                        mlnx_non_removable_mountables_disks="${mlnx_non_removable_mountables_disks} ${mlnx_block_device_name}"
+                    fi
+                fi
             fi
-        fi
+            break
+        done
     done
-    echo "WARNING: ${onie_platform}: Unable to find internal ONIE install device"
-    echo "WARNING: expecting $mlnx_x86_disk"
+    if [ "1" == "${mlnx_non_removable_mountables_disks_count}" ] ; then
+        device="/dev/${mlnx_non_removable_mountables_disks}"
+        echo $device
+        return 0
+    fi
+
+    log_warning_msg "${onie_platform}: Unable to find internal ONIE install device"
+    if [ "0" == "${mlnx_non_removable_mountables_disks_count}" ] ; then
+        log_warning_msg "could not find non-removable disk media at the mountable partitions `echo ${mlnx_mountables_partitions}`"
+        echo "no device found"
+    else
+        log_warning_msg "found more than 1 non-removable block device - aborting"
+        log_warning_msg "non-removable block devices list: ${mlnx_non_removable_mountables_disks}"
+        echo "more than 1 available device: ${mlnx_non_removable_mountables_disks}"
+    fi
     return 1
 }
 
