x86_64-uefi: add dosfstools package
Add the dosfstools package for working with EFI System Partitions.
The basic support for vfat in busybox was just not good enough.

The dosfstools packages adds:

  mkfs.vfat
  fsck.vfat

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -320,6 +320,9 @@ endif
 ifeq ($(MTREE_ENABLE),yes)
   include make/mtree.make
 endif
+ifeq ($(DOSFSTOOLS_ENABLE),yes)
+  include make/dosfstools.make
+endif
 include make/images.make
 include make/demo.make
 
