--- a/machine/accton/accton_as7700_32x/kernel/config
+++ b/machine/accton/accton_as7700_32x/kernel/config
@@ -1,10 +1,5 @@
 CONFIG_AS7700_32X=y
-CONFIG_HUGETLBFS=y
 CONFIG_RTC_DRV_DS1672=y
-CONFIG_SERIAL_8250_RUNTIME_UARTS=4
-CONFIG_MTD_CFI_NOSWAP=y
-CONFIG_HZ_250=y
-
 CONFIG_MODULES=y
 CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_MODULE_UNLOAD=y
@@ -15,7 +10,10 @@ CONFIG_MODULE_FORCE_UNLOAD=y
 # CONFIG_MODULE_SIG is not set
 # CONFIG_MTD_TESTS is not set
 # CONFIG_I2C_STUB is not set
+# CONFIG_COMEDI is not set
 # CONFIG_USB_ENESTORAGE is not set
-# CONFIG_RBTREE_TEST is not set
+# CONFIG_LTE_GDM724X is not set
+# CONFIG_LUSTRE_FS is not set
 # CONFIG_INTERVAL_TREE_TEST is not set
 # CONFIG_CRYPTO_TEST is not set
+# CONFIG_BPF_JIT is not set
