Issue #66: Added kernel-e500mc to the .SWI
Was probably removed for space (given that it's the same as
what's built into the loader) but this is needed for NFS mounting.
It's not too much bigger, so I'm adding it to the .SWI by default.

--- a/builds/swi/powerpc/all/Makefile
+++ b/builds/swi/powerpc/all/Makefile
@@ -27,6 +27,7 @@ endif
 # for this SWI configuration.
 #
 ONL_REQUIRED_PACKAGES := kernel-85xx:powerpc \
+             kernel-e500mc:powerpc \
 			 initrd-powerpc:powerpc
 
 include $(ONL)/make/component.mk
