--- a/builds/swi/powerpc/all/Makefile.comp
+++ b/builds/swi/powerpc/all/Makefile.comp
@@ -35,9 +35,10 @@ SWI := onl-$(ONL_RELEASE_VERSION)-powerpc-all
 
 # We need the following package binaries
 kernel-85xx    := $(shell $(ONL_PKG_INSTALL) kernel-85xx:powerpc --find-file kernel-85xx)
+kernel-e500mc    := $(shell $(ONL_PKG_INSTALL) kernel-e500mc:powerpc --find-file kernel-e500mc)
 initrd-powerpc := $(shell $(ONL_PKG_INSTALL) initrd-powerpc:powerpc --find-file initrd-powerpc)
 
-KERNELS := $(kernel-85xx)
+KERNELS := $(kernel-85xx) $(kernel-e500mc)
 INITRD := $(initrd-powerpc)
 ARCH := powerpc
 ONL_BUILD_CONFIG := powerpc.all
