crosstool-ng: support building powerpc64 linux kernel
Making gcc be able to build linux kernel for powerpc64.  The C
libraries still stay at 32bit.  i.e., the linux kernel for powerc
platform will be either 32bit or 64bit, the user space applications
are always 32bit.

--- a/build-config/conf/crosstool/uClibc-0.9.32.1/crosstool.powerpc-softfloat.config
+++ b/build-config/conf/crosstool/uClibc-0.9.32.1/crosstool.powerpc-softfloat.config
@@ -1,9 +1,11 @@
 #
 # Automatically generated make config: don't edit
-# crosstool-NG 1.19.0 Configuration
-# Thu Jul 17 07:30:40 2014
+# crosstool-NG 2 Configuration
+# Fri Feb  6 16:37:56 2015
 #
 CT_CONFIGURE_has_xz=y
+CT_CONFIGURE_has_cvs=y
+CT_CONFIGURE_has_svn=y
 CT_MODULES=y
 
 #
@@ -271,7 +273,7 @@ CT_BINUTILS_LINKER_LD=y
 CT_BINUTILS_LINKERS_LIST="ld"
 CT_BINUTILS_LINKER_DEFAULT="bfd"
 # CT_BINUTILS_PLUGINS is not set
-CT_BINUTILS_EXTRA_CONFIG_ARRAY=""
+CT_BINUTILS_EXTRA_CONFIG_ARRAY="--enable-64-bit-bfd"
 CT_BINUTILS_FOR_TARGET=y
 CT_BINUTILS_FOR_TARGET_IBERTY=y
 CT_BINUTILS_FOR_TARGET_BFD=y
@@ -360,7 +362,7 @@ CT_CC_LANG_OTHERS=""
 #
 CT_CC_ENABLE_CXX_FLAGS=""
 CT_CC_CORE_EXTRA_CONFIG_ARRAY=""
-CT_CC_EXTRA_CONFIG_ARRAY=""
+CT_CC_EXTRA_CONFIG_ARRAY="--enable-targets=powerpc64"
 CT_CC_STATIC_LIBSTDCXX=y
 # CT_CC_GCC_SYSTEM_ZLIB is not set
 
@@ -408,7 +410,7 @@ CT_LIBC_uClibc_AVAILABLE=y
 # CT_LIBC_UCLIBC_V_0_9_33_2 is not set
 # CT_LIBC_UCLIBC_V_0_9_33_1 is not set
 # CT_LIBC_UCLIBC_V_0_9_33 is not set
-CT_LIBC_UCLIBC_V_0_9_32_1=1
+CT_LIBC_UCLIBC_V_0_9_32_1=y
 # CT_LIBC_UCLIBC_V_0_9_32 is not set
 # CT_LIBC_UCLIBC_V_0_9_31 is not set
 # CT_LIBC_UCLIBC_V_0_9_30_3 is not set
