AlphaNetworks platforms: change the vendor name to follow naming conventions
Signed-off-by: Curt Brune <curt@cumulusnetworks.com>

--- a/machine/alphanetworks/alphanetworks_snq6070_320f/onie-rom.conf
+++ b/machine/alphanetworks/alphanetworks_snq6070_320f/onie-rom.conf
@@ -1,6 +1,6 @@
 # Alpha Networks SNQ6070-320F ONIE ROM configuration
 
-description="Alpha, SNQ6070-320F"
+description="AlphaNetworks, SNQ6070-320F"
 
 # make one continuous ROM image, i.e. onie-uimage and env sector are adjacent.
 # see kernel/linux/arch/powerpc/boot/dts/p2020rdb.dts for NOR flash layout
