--- a/machine/alphanetworks/alphanetworks_snq60a0_320f/installer.conf
+++ b/machine/alphanetworks/alphanetworks_snq60a0_320f/installer.conf
@@ -1,6 +1,6 @@
-# Alpha Networks SNX60A0-486F ONIE installer configuration
+# Alpha Networks SNQ60A0-320F ONIE installer configuration
 
-description="Alpha_Networks, SNX60A0-486F"
+description="AlphaNetworks, SNQ60A0-320F"
 
 # Default ONIE block device
 install_device_platform()
