--- a/machine/alphanetworks/alphanetworks_snx6070_486f/onie-rom.conf
+++ b/machine/alphanetworks/alphanetworks_snx6070_486f/onie-rom.conf
@@ -1,6 +1,6 @@
 # Alpha Networks SNX6070-486F ONIE ROM configuration
 
-description="Alpha, SNX6070-486F"
+description="AlphaNetworks, SNX6070-486F"
 
 # make one continuous ROM image, i.e. onie-uimage and env sector are adjacent.
 # see kernel/linux/arch/powerpc/boot/dts/p2020rdb.dts for NOR flash layout
