--- a/machine/alphanetworks/alphanetworks_snx60a0_486f/installer.conf
+++ b/machine/alphanetworks/alphanetworks_snx60a0_486f/installer.conf
@@ -1,6 +1,6 @@
-# Alpha Networks SNQ60A0-320F ONIE installer configuration
+# Alpha Networks SNX60A0-486F ONIE installer configuration
 
-description="Alpha_Networks, SNQ60A0-320F"
+description="AlphaNetworks, SNX60A0-486F"
 
 # Default ONIE block device
 install_device_platform()
