--- a/.gitmodules
+++ b/.gitmodules
@@ -35,3 +35,9 @@
 [submodule "submodules/onlp-accton"]
 	path = submodules/onlp-accton
 	url = git@github.com:opennetworklinux/onlp-accton
+[submodule "submodules/linux"]
+	path = submodules/linux
+	url = git@github.com:opennetworklinux/linux
+[submodule "submodules/onlp-dell"]
+	path = submodules/onlp-dell
+	url = git@github.com:opennetworklinux/onlp-dell
