Aphanetworks: Modify vendor name for DUT configuration file.
Signed-off-by: Curt Brune <curt@cumulusnetworks.com>

--- a/contrib/autobuild/config/alphanetworks_snx60a0_486f.json
+++ b/contrib/autobuild/config/alphanetworks_snx60a0_486f.json
@@ -5,9 +5,9 @@
     "options": {
         "onie_machine": "snx60a0_486f",
         "onie_machine_rev": 0,
-        "onie_vendor": "alpha_networks",
+        "onie_vendor": "alphanetworks",
         "onie_arch": "x86_64",
-        "onie_installer": "onie-installer-x86_64-alpha_networks_snx60a0_486f-r0",
-        "onie_updater": "onie-updater-x86_64-alpha_networks_snx60a0_486f-r0"
+        "onie_installer": "onie-installer-x86_64-alphanetworks_snx60a0_486f-r0",
+        "onie_updater": "onie-updater-x86_64-alphanetworks_snx60a0_486f-r0"
     }
 }
