onlp linking broken: look for /etc/onl_platform
ONLP is supposed to look for /etc/onl_platform to find out which platform
we're running on, but was misconfigured to look for the wrong file

--- a/components/any/onlp/onlp/Makefile.comp
+++ b/components/any/onlp/onlp/Makefile.comp
@@ -55,7 +55,7 @@ include $(BUILDER)/so.mk
 
 GLOBAL_CFLAGS += -DAIM_CONFIG_INCLUDE_CTOR_DTOR=1
 GLOBAL_CFLAGS += -DAIM_CONFIG_INCLUDE_MODULES_INIT=1
-GLOBAL_CFLAGS += -DONLP_CONFIG_PLATFORM_FILENAME="\"/etc/sl_platform\""
+GLOBAL_CFLAGS += -DONLP_CONFIG_PLATFORM_FILENAME="\"/etc/onl_platform\""
 GLOBAL_CFLAGS += -fPIC
 GLOBAL_LINK_LIBS += -lpthread $(LIBONLP_PLATFORM) $(LIBONLP_PLATFORM_DEFAULTS)
 
