ORC: link with -g by default
debugging made easier

--- a/components/powerpc/orc/Makefile.comp
+++ b/components/powerpc/orc/Makefile.comp
@@ -59,7 +59,7 @@ GLOBAL_CFLAGS += -DORC_CONFIG_INCLUDE_AIM_MAIN=1
 GLOBAL_CFLAGS += -DAIM_CONFIG_AIM_MAIN_FUNCTION="orc_main"
 GLOBAL_CFLAGS += -g
 
-GLOBAL_LINK_LIBS += -ldl -rdynamic -lpthread   # pthreads is needed to unbork gdb
+GLOBAL_LINK_LIBS += -g -ldl -rdynamic -lpthread   # pthreads is needed to unbork gdb
 
 
 include $(ONL)/make/deb-subdir.mk
