--- a/build-config/conf/uclibc/0.9.32.1/uclibc.x86_64.config
+++ b/build-config/conf/uclibc/0.9.32.1/uclibc.x86_64.config
@@ -197,7 +197,7 @@ UCLIBC_HAS_FNMATCH_OLD=y
 # UCLIBC_HAS_WORDEXP is not set
 # UCLIBC_HAS_NFTW is not set
 # UCLIBC_HAS_FTW is not set
-# UCLIBC_HAS_FTS is not set
+UCLIBC_HAS_FTS=y
 UCLIBC_HAS_GLOB=y
 # UCLIBC_HAS_GNU_GLOB is not set
 # UCLIBC_HAS_UTMPX is not set
