Moved the linux repo to the anonymous style URL

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,6 +22,9 @@
 [submodule "submodules/onlp-quanta"]
 	path = submodules/onlp-quanta
 	url = git://github.com/opennetworklinux/ONLP-quanta
+[submodule "submodules/linux"]
+	path = submodules/linux
+	url = git://github.com/opennetworklinux/linux
 # These are actually closed source repos and can only
 # be checked out by maintainers.  The automatic
 # submodule checkout part of the build system should
@@ -35,9 +38,6 @@
 [submodule "submodules/onlp-accton"]
 	path = submodules/onlp-accton
 	url = git@github.com:opennetworklinux/onlp-accton
-[submodule "submodules/linux"]
-	path = submodules/linux
-	url = git@github.com:opennetworklinux/linux
 [submodule "submodules/onlp-dell"]
 	path = submodules/onlp-dell
 	url = git@github.com:opennetworklinux/onlp-dell
