--- a/build-config/conf/busybox.config
+++ b/build-config/conf/busybox.config
@@ -725,6 +725,7 @@ CONFIG_WATCHDOG=y
 # CONFIG_SYS_EEPROM_DEVICE_MTD is not set
 CONFIG_SYS_EEPROM_I2C_DEVICE=""
 CONFIG_SYS_EEPROM_I2C_ADDR=
+CONFIG_SYS_EEPROM_I2C_MEM_ADDR_BITS=8
 CONFIG_SYS_EEPROM_MTD_DEVICE=""
 CONFIG_SYS_EEPROM_OFFSET=0
 CONFIG_SYS_EEPROM_SIZE=0
